--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
 	"name": "git-graph",
 	"displayName": "Git Graph",
 	"version": "1.19.1",
-	"publisher": "mhutchie",
+	"publisher": "ADIX7",
 	"author": {
-		"name": "Michael Hutchison",
-		"email": "mhutchie@16right.com"
+		"name": "Ádám Kovács",
+		"email": "kovacsadam07@outlook.hu"
 	},
 	"description": "View a Git Graph of your repository, and perform Git actions from the graph.",
 	"keywords": [
@@ -18,10 +18,10 @@
 	"categories": [
 		"Other"
 	],
-	"homepage": "https://github.com/mhutchie/vscode-git-graph",
+	"homepage": "https://github.com/ADIX7/vscode-git-graph",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/mhutchie/vscode-git-graph.git"
+		"url": "https://github.com/ADIX7/vscode-git-graph.git"
 	},
 	"bugs": {
 		"url": "https://github.com/mhutchie/vscode-git-graph/issues"
