--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,6 +1,12 @@
-name: 'Build'
+name: 'Build & Test'
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
@@ -12,3 +18,4 @@ jobs:
         node-version: '12.x'
     - run: npm install
     - run: npm run compile
+    - run: npm run test
