--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -5,6 +5,7 @@
 			"es6"
 		],
 		"module": "commonjs",
+		"moduleResolution": "node",
 		"outDir": "../out",
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitAny": true,
